fix lightbox not covering search query indicators

--- a/app/spa/src/style.scss
+++ b/app/spa/src/style.scss
@@ -338,7 +338,7 @@ a {
 }
 
 #lightbox {
-  z-index: 100;
+  z-index: 200;
   position: fixed;
   display: none;
   top: 0;
